# alien

./: .env.test.example  .gitattributes  .gitignore  .release-plz.toml  AGENTS.md  Cargo.toml  LICENSE.md  README.md  README_.md  README_DRAFT.md  SECURITY.md  biome.json  cliff.toml  context7.json  hk.pkl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
crates/alien-agent/: Cargo.toml  README.md
crates/alien-agent/src/: cli.rs  config.rs  db.rs  error.rs  lib.rs  lock.rs  main.rs  otlp_server.rs  schema.sql
crates/alien-ai-gateway-node/: .gitignore  Cargo.toml  build.rs  package.json
crates/alien-ai-gateway-node/src/: error.rs  lib.rs
crates/alien-aws-clients/: CHANGELOG.md  Cargo.toml  README.md
crates/alien-aws-clients/src/: lib.rs
crates/alien-aws-clients/tests/: aws_acm_client_tests.rs  aws_apigatewayv2_client_tests.rs  aws_autoscaling_client_tests.rs  aws_cloudformation_client_tests.rs  aws_cloudwatch_logs_client_tests.rs  aws_codebuild_client_tests.rs  aws_dynamodb_client_tests.rs  aws_ec2_client_tests.rs  aws_ecr_client_tests.rs  aws_elbv2_client_tests.rs  aws_eventbridge_client_tests.rs  aws_iam_client_tests.rs  aws_kms_client_tests.rs  aws_lambda_client_tests.rs  aws_s3_client_tests.rs  aws_secrets_manager_client_tests.rs  aws_sqs_client_tests.rs  aws_ssm_client_tests.rs  aws_sts_client_tests.rs
crates/alien-azure-clients/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/alien-azure-clients/openapi/: ComputeRP.json  ContainerApps.json  DiskRP.json  Jobs.json  ManagedEnvironments.json  ManagedEnvironmentsDaprComponents.json  ManagedIdentity.json  Queue.json  authorization-RoleAssignmentsCalls.json  authorization-RoleDefinitionsCalls.json  blob.json  certificates.json  containerregistry.json  keyvault.json  loadBalancer.json  managedClusters.json  managedservices.json  namespace-preview.json  natGateway.json  networkSecurityGroup.json  publicIpAddress.json  resources.json  secrets.json  storage.json  table.json  virtualNetwork.json
crates/alien-azure-clients/scripts/: download_azure_openapi_specs.sh
crates/alien-azure-clients/src/: lib.rs
crates/alien-azure-clients/tests/: azure_authorization_client_tests.rs  azure_blob_containers_client_tests.rs  azure_container_apps_client_tests.rs  azure_containerregistry_client_tests.rs  azure_keyvault_client_tests.rs  azure_load_balancer_client_tests.rs  azure_managed_disks_client_tests.rs  azure_managed_identity_client_tests.rs  azure_managed_services_client_tests.rs  azure_network_client_tests.rs  azure_resource_groups_client_tests.rs  azure_service_bus_client_tests.rs  azure_table_storage_client_tests.rs  azure_vmss_client_tests.rs
crates/alien-bindings/: AGENTS.md  CHANGELOG.md  Cargo.toml  FORMAT.md  README.md  build.rs
crates/alien-bindings-node/: .gitignore  Cargo.toml  build.rs  index.d.ts  index.js  package.json
crates/alien-bindings-node/src/: container.rs  error.rs  kv.rs  lib.rs  queue.rs  remote_storage.rs  storage.rs  vault.rs
crates/alien-bindings/proto/: artifact_registry.proto  build.proto  container.proto  control.proto  function.proto  kv.proto  queue.proto  service_account.proto  storage.proto  vault.proto  wait_until.proto  worker.proto
crates/alien-bindings/src/: alien_context.rs  aws_sdk.rs  bindings.rs  credential_source.rs  error.rs  http_client.rs  kubernetes_client.rs  lib.rs  provider.rs  refreshing.rs  remote.rs  traits.rs  wait_until.rs
crates/alien-bindings/tests/: AGENTS.md  artifact_registry.rs  build.rs  function.rs  kv.rs  storage.rs  vault.rs  worker.rs
crates/alien-build/: Cargo.toml  README.md
crates/alien-build/src/: base_images.rs  cache.rs  command_output.rs  dependencies.rs  error.rs  lib.rs  merge.rs  plan.rs  push.rs  settings.rs  stack.rs  tests.rs
crates/alien-build/tests/: build_integration_tests.rs  image_shape_tests.rs  rust_integration_tests.rs  typescript_integration_tests.rs
crates/alien-cli/: Cargo.toml  DESIGN.md  README.md
crates/alien-cli-common/: Cargo.toml  README.md
crates/alien-cli-common/src/: lib.rs  network.rs
crates/alien-cli/src/: AGENTS.md  auth.rs  config.rs  deployment_resolver.rs  deployment_tracking.rs  error.rs  execution_context.rs  git_utils.rs  interaction.rs  lib.rs  main.rs  output.rs  platform_deployment_resolver.rs  project_link.rs  test_utils.rs  ui.rs
crates/alien-cli/tests/: build_tests.rs  export_tests.rs  help_security_tests.rs  unlink_tests.rs
crates/alien-client-config/: CHANGELOG.md  Cargo.toml  README.md
crates/alien-client-config/src/: client_config_ext.rs  lib.rs
crates/alien-client-core/: CHANGELOG.md  Cargo.toml  README.md
crates/alien-client-core/src/: error.rs  lib.rs  request_utils.rs
crates/alien-cloudformation/: Cargo.toml
crates/alien-cloudformation/examples/: emit_gated_cfn.rs
crates/alien-cloudformation/src/: built_ins.rs  emitter.rs  generator.rs  lib.rs  registry.rs  template.rs  test_utils.rs
crates/alien-cloudformation/tests/: generator.rs
crates/alien-commands/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/alien-commands-client/: Cargo.toml  README.md
crates/alien-commands-client/src/: client.rs  error.rs  lib.rs
crates/alien-commands/src/: dispatchers.rs  error.rs  lib.rs  receiver.rs  types.rs
crates/alien-core/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/alien-debug-session/: Cargo.toml
crates/alien-deploy-cli/: AGENTS.md  Cargo.toml  README.md
crates/alien-deployment/: AGENTS.md  Cargo.toml  README.md
crates/alien-error/: CHANGELOG.md  Cargo.toml  README.md
crates/alien-gateway/: Cargo.toml
crates/alien-gcp-clients/: CHANGELOG.md  Cargo.toml  README.md
crates/alien-helm/: Cargo.toml
crates/alien-infra/: AGENTS.md  Cargo.toml  DESIGN.md  README.md
crates/alien-k8s-clients/: CHANGELOG.md  Cargo.toml  README.md
crates/alien-launcher/: Cargo.toml
crates/alien-local/: Cargo.toml  README.md
crates/alien-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/alien-manager/: AGENTS.md  Cargo.toml  README.md  openapi.json
crates/alien-observer/: Cargo.toml
crates/alien-operator/: Cargo.toml  README.md
(+14180 files in other folders)
