[package]
name = "alien-ai-gateway-node"
version.workspace = true
edition = "2021"
description = "Node-API (napi-rs) addon exposing the alien AI gateway to JavaScript"
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alien-gateway = { workspace = true }
alien-error = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
