[package]
name = "alien-client-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cloud client configuration and credential loading for Alien"
license-file.workspace = true

[features]
default = []
all-platforms = ["aws", "gcp", "azure", "kubernetes"]
aws = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sdk-sts",
    "dep:aws-types",
    "dep:chrono",
    "dep:reqwest",
]
gcp = ["dep:reqwest"]
azure = []
kubernetes = []
test-utils = ["alien-core/test-utils"]

[lib]
crate-type = ["rlib"]

[dependencies]
alien-core = { workspace = true }
alien-error = { workspace = true }
alien-client-core = { workspace = true }
aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-sdk-sts = { workspace = true, optional = true }
aws-types = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"], optional = true }

async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
