[package]
name = "alien-commands"
version.workspace = true
edition = "2021"
description = "Alien Commands protocol implementation"
license-file.workspace = true

[features]
default = ["server", "runtime"]
server = [
    "alien-bindings",
    "alien-error/axum",
    "reqwest",
    "axum",
    "uuid",
    "http",
    "object_store",
    "bytes",
    "alien-aws-clients",
    "alien-gcp-clients",
    "alien-azure-clients",
    "alien-client-core",
    "tokio",
    "hmac",
    "sha2",
    "hex",
]
runtime = [
    "alien-bindings", 
    "reqwest",
    "bytes",
    "futures",
    "tokio",
]
# App-owned pull command receiver for Containers and Daemons.
# Deliberately light: protocol types + HTTP only. Must NOT pull the heavy
# `server` deps (axum, object_store, cloud clients) — verify with:
#   cargo tree -p alien-commands --no-default-features --features receiver
receiver = [
    "reqwest",
    "bytes",
    "tokio",
    "tokio-util",
]
dispatchers = [
    "alien-aws-clients",
    "alien-gcp-clients",
    "alien-azure-clients",
    "alien-client-core",
    "reqwest",
]
openapi = ["utoipa", "alien-error/openapi", "alien-bindings/openapi", "alien-core/openapi"]
test-utils = [
    "server",
    "runtime", 
    "tempfile",
    "tokio",
    "alien-bindings/local",
]

# Standalone test command server for the TypeScript integration suite. Only
# built when `test-utils` is enabled (it reuses `TestCommandServer`); never part
# of a normal build.
[[bin]]
name = "test-command-server"
path = "src/bin/test-command-server.rs"
required-features = ["test-utils"]

[dependencies]
# Core dependencies (always available)
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
# The axum integration (IntoResponse for AlienError) is only needed by the
# `server` feature, which enables `alien-error/axum`; keeping it off the base
# dependency keeps the `receiver` feature free of axum.
alien-error = { workspace = true }
tracing = "0.1"
url = "2.5"

# Server feature dependencies
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
alien-bindings = { workspace = true, optional = true }
alien-aws-clients = { workspace = true, optional = true }
alien-gcp-clients = { workspace = true, optional = true }
alien-azure-clients = { workspace = true, optional = true }
alien-client-core = { workspace = true, optional = true }
axum = { workspace = true, features = ["macros", "json", "tokio", "http1"], optional = true }
uuid = { workspace = true, features = ["v4", "serde"], optional = true }
http = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }

# Runtime feature dependencies  
reqwest = { workspace = true, features = ["json"], optional = true }
bytes = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

# Core types - always available
alien-core = { workspace = true }

# OpenAPI feature dependencies
utoipa = { workspace = true, features = ["axum_extras", "chrono"], optional = true }

# Receiver feature dependencies
tokio-util = { workspace = true, optional = true }

# Test utilities feature dependencies
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test = "0.4"
temp-env = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
